maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:54: error: method chercheDir has return statement; needs result type
  return dir
  ^